Fix height issue on mobile devices

--- a/src/components/board/board.scss
+++ b/src/components/board/board.scss
@@ -3,6 +3,7 @@
 .board {
 	flex: 1;
 	height: 100vh;
+	overflow-y: scroll;
 
 	.board-content {
 		display: flex;
